<resources>
    <string name="app_name">EdAppT</string>


    <string name="difficulty_prompt">Game Difficulty</string>

    <string-array name="difficulty_variable_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Advanced</item>
    </string-array>

    <string name="time_prompt">Game Time</string>

    <string-array name="time_variable_array">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
    </string-array>

    <string name="age_prompt">Age</string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="new_game">New Game?</string>
    <string name="save_score">Save Score</string>
    <string name="share">Share</string>
    <string name="score_0">Score: 0</string>
    <string name="shake_to_start">SHAKE TO START!</string>
    <string name="todo">TODO</string>
    <string name="game_sound">Game Sound</string>
    <string name="game_difficulty">Game Difficulty</string>
    <string name="on">ON</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="game_time">Game Time</string>
    <string name="off">OFF</string>
    <string name="settings">Settings</string>
    <string name="new_game_main">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="difficulty">Difficulty</string>
    <string name="name_highscore">Name:</string>
    <string name="edappt_maths">EdAppT Maths</string>

    <string-array name="age_variable_array">
        <item>8-10</item>
        <item>11-12</item>
        <item>13-14</item>
        <item>15-16</item>
    </string-array>


</resources>
